Bug 993554 - Prevent clipping sync-scrollable subframes to the critical displayport on Fennec. r=BenWa,botond a=lsblakk